--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 
 services:
   app:
+    image: cleaningrecord_api:latest
     build:
       context: .
     ports:
@@ -16,7 +17,7 @@ services:
       - DB_HOST=db
       - DB_NAME=app
       - DB_USER=postgres
-      - DB_PASS=supersecrectpassword
+      - DB_PASS=mal486
     depends_on:
       - db
   db:
@@ -24,4 +25,4 @@ services:
     environment: 
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=supersecrectpassword    
+      - POSTGRES_PASSWORD=mal486
