--- a/app/cleaning_rec/Config/folder_config.json
+++ b/app/cleaning_rec/Config/folder_config.json
@@ -2,8 +2,8 @@
     "version": "0.2.0",
     "folder_configs": 
         {
-            "BasePath": "/home/manny/cleaningrecord",
-            "BuildPath": "/home/manny/UberBuild",
+            "BasePath": "../../cleaningrecord",
+            "BuildPath": "/app/cleaning_rec",
             "HTMLFolder": "HTML",
             "HTMLFiles":
             {
