--- a/app/cleaning_rec/Config/DBConfig.json
+++ b/app/cleaning_rec/Config/DBConfig.json
@@ -5,10 +5,11 @@
             "mysql":
             {
                 "DBConnecter": "mysql+mysqlconnector",
-                "UserName": "manny",
-                "Password": "Mallory_486",
-                "ServerOrEndPoint": "localhost",
-                "DatabaseName": "manny_uber_records_2021"
+                "UserName": "clean_records",
+                "Password": "Cleaning_486",
+                "ServerOrEndPoint": "172.21.0.2",
+                "DatabaseName": "app",
+                "AuthPlugin": "auth_plugin=mysql_native_password"
             },
             
             "postgresql":
