--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     environment:
       - DB_HOST=172.21.0.2
       - DB_NAME=app
-      - DB_USER=records_user
+      - DB_USER=clean_records
       - DB_PASS=Cleaning_486
     depends_on:
       - db
@@ -26,7 +26,7 @@ services:
     environment:
       MYSQL_DATABASE: 'app'
       # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'records_user'
+      MYSQL_USER: 'clean_records'
       # You can use whatever password you like
       MYSQL_PASSWORD: 'Cleaning_486'
       # Password for root access
