--- a/app/cleaning_rec/Config/config.json
+++ b/app/cleaning_rec/Config/config.json
@@ -11,6 +11,7 @@
             "CSVDownloadPath": "/app/cleaning_rec/CSV/", 
             "DBName": "mysql",
             "WebSocket_URL": "ws://127.0.0.1:8081/appmsg/",
+            "User": "CleaningRecords",
             "DataFrameColumnsNames": "{'Date_and_time_of_trip':'Date and time of trip', 'Date_and_Time_of_clean':'Date and Time of clean', 'Driver_name':'Driver name', 'Driver_certificate_number':'Driver certificate number', 'Passenger_hightouch_surfaces_cleaned':'Passenger high-touch surfaces cleaned? (Y/N)', 'Driver_hightouch_surfaces_cleaned':'Driver high-touch surfaces cleaned? (Y/N)'}"
         }
     
