--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
+      - ../../cleaningrecord:/cleaningrecord
     command: >
       sh -c "python manage.py wait_for_db && 
              python manage.py migrate && 
