--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,11 @@ services:
              python manage.py runserver 0.0.0.0:8000"  
 
     environment:
-      - DB_HOST=172.21.0.2
+      - DB_HOST=db
       - DB_NAME=app
       - DB_USER=clean_records
       - DB_PASS=Cleaning_486
+      - DEBUG=1
     
     depends_on:
       - db
