--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,10 @@ services:
     env_file:
       - .env
     environment:
-      - DB_HOST=db
+      - DB_HOST=192.168.0.229
       - DB_NAME=app
       - DB_USER=clean_records
-      - DB_PASS=Cleaning_486
+      - DB_PASS=Mallory@486
       - DEBUG=1
     
     depends_on:
@@ -34,9 +34,9 @@ services:
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'clean_records'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'Cleaning_486'
+      MYSQL_PASSWORD: 'Mallory@486'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'Cleaning_486'
+      MYSQL_ROOT_PASSWORD: 'Mallory@486'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
