--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,194 @@
-django>=3.2.9,<4.0a1
-djangorestframework>=3.12.4,<3.13.0
-flake8>=4.0.1,<4.1.0
-gunicorn==20.1.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_kmp_llvm
+absl-py=1.0.0=pypi_0
+aioredis=1.3.1=pypi_0
+asgi-redis=1.1.0=pypi_0
+asgiref=3.4.1=pypi_0
+asttokens=2.0.5=pypi_0
+astunparse=1.6.3=pypi_0
+async-timeout=4.0.1=pypi_0
+attrs=21.2.0=pypi_0
+autobahn=21.3.1=pypi_0
+automat=20.2.0=pypi_0
+backcall=0.2.0=pypi_0
+bcrypt=3.2.0=pypi_0
+beautifulsoup4=4.10.0=pypi_0
+black=21.12b0=pypi_0
+boto3=1.20.14=pypi_0
+botocore=1.23.14=pypi_0
+ca-certificates=2022.12.7=ha878542_0
+cachetools=4.2.4=pypi_0
+camelot-py=0.10.1=pypi_0
+certifi=2022.12.7=pyhd8ed1ab_0
+cffi=1.15.0=pypi_0
+channels=3.0.4=pypi_0
+channels-redis=3.3.1=pypi_0
+chardet=4.0.0=pypi_0
+charset-normalizer=2.0.8=pypi_0
+click=8.0.3=pypi_0
+confluent-kafka=1.7.0=pypi_0
+constantly=15.1.0=pypi_0
+cryptography=35.0.0=pypi_0
+cycler=0.10.0=pypi_0
+daphne=3.0.2=pypi_0
+decorator=5.1.1=pypi_0
+distro=1.6.0=pypi_0
+django=3.2=pypi_0
+django-filter=21.1=pypi_0
+django-wkhtmltopdf=3.3.0=pypi_0
+djangorestframework=3.12.4=pypi_0
+docker=5.0.3=pypi_0
+et-xmlfile=1.1.0=pypi_0
+executing=0.8.2=pypi_0
+flatbuffers=2.0=pypi_0
+fpdf=1.7.2=pypi_0
+gast=0.4.0=pypi_0
+gevent=21.8.0=pypi_0
+ghostscript=0.7=pypi_0
+google-auth=2.3.3=pypi_0
+google-auth-oauthlib=0.4.6=pypi_0
+google-pasta=0.2.0=pypi_0
+greenlet=1.1.1=pypi_0
+grpcio=1.43.0=pypi_0
+gunicorn=20.1.0=pypi_0
+h5py=3.6.0=pypi_0
+hiredis=2.0.0=pypi_0
+hyperlink=21.0.0=pypi_0
+icu=69.1=h9c3ff4c_0
+idna=3.3=pypi_0
+imageio=2.13.5=pypi_0
+importlib-metadata=4.8.2=pypi_0
+incremental=21.3.0=pypi_0
+ipython=8.0.0=pypi_0
+jansson=2.14=h7f98852_0
+jedi=0.18.1=pypi_0
+jmespath=0.10.0=pypi_0
+joblib=1.0.1=pypi_0
+kafka-python=2.0.2=pypi_0
+keras=2.7.0=pypi_0
+keras-preprocessing=1.1.2=pypi_0
+kiwisolver=1.3.2=pypi_0
+krb5=1.19.2=hac12032_0
+ld_impl_linux-64=2.35.1=h7274673_9
+libclang=12.0.0=pypi_0
+libedit=3.1.20210910=h7f8727e_0
+libffi=3.3=he6710b0_2
+libgcc-ng=12.2.0=h65d4601_19
+libiconv=1.17=h166bdaf_0
+libpq=12.2=h553bfba_1
+libstdcxx-ng=12.2.0=h46fd767_19
+libxml2=2.9.14=haae042b_4
+libzlib=1.2.13=h166bdaf_4
+llvm-openmp=15.0.7=h0cdce71_0
+markdown=3.3.5=pypi_0
+matplotlib=3.4.3=pypi_0
+matplotlib-inline=0.1.3=pypi_0
+msgpack=1.0.2=pypi_0
+msgpack-python=0.5.6=pypi_0
+mypy-extensions=0.4.3=pypi_0
+mysql-connector=2.2.9=pypi_0
+mysql-connector-python=8.0.27=pypi_0
+mysqlclient=2.1.0=pypi_0
+ncurses=6.3=h7f8727e_2
+networkx=2.6.3=pypi_0
+numpy=1.21.2=pypi_0
+oauthlib=3.1.1=pypi_0
+opencv-python=4.5.4.60=pypi_0
+openpyxl=3.0.9=pypi_0
+openssl=1.1.1s=h0b41bf4_1
+opt-einsum=3.3.0=pypi_0
+packaging=21.3=pypi_0
+pandas=1.3.3=pypi_0
+paramiko=2.8.1=pypi_0
+parso=0.8.3=pypi_0
+pathspec=0.9.0=pypi_0
+pcre=8.45=h9c3ff4c_0
+pdfkit=0.6.1=pypi_0
+pdfminer-six=20211012=pypi_0
+pdftopng=0.2.3=pypi_0
+pdftotree=0.5.0=pypi_0
+pexpect=4.8.0=pypi_0
+pickleshare=0.7.5=pypi_0
+pillow=8.3.2=pypi_0
+pip=22.3.1=pypi_0
+platformdirs=2.4.1=pypi_0
+prompt-toolkit=3.0.24=pypi_0
+protobuf=3.19.1=pypi_0
+psycopg2=2.8.6=py39h3c74f83_1
+ptyprocess=0.7.0=pypi_0
+pure-eval=0.2.1=pypi_0
+pyasn1=0.4.8=pypi_0
+pyasn1-modules=0.2.8=pypi_0
+pycparser=2.21=pypi_0
+pygments=2.11.2=pypi_0
+pymysql=1.0.2=pypi_0
+pynacl=1.4.0=pypi_0
+pyopenssl=21.0.0=pypi_0
+pyparsing=2.4.7=pypi_0
+pypdf2=1.26.0=pypi_0
+pysftp=0.2.9=pypi_0
+python=3.9.6=h12debd9_1
+python-dateutil=2.8.2=pypi_0
+python-dotenv=0.21.1=pypi_0
+python_abi=3.9=2_cp39
+pytz=2021.1=pypi_0
+pywavelets=1.2.0=pypi_0
+readline=8.1=h27cfd23_0
+redis=3.5.3=pypi_0
+requests=2.26.0=pypi_0
+requests-oauthlib=1.3.0=pypi_0
+rest-pandas=1.1.0=pypi_0
+rsa=4.8=pypi_0
+s3transfer=0.5.0=pypi_0
+scikit-image=0.19.1=pypi_0
+scikit-learn=0.24.2=pypi_0
+scipy=1.7.1=pypi_0
+seaborn=0.11.2=pypi_0
+selectivesearch=0.4=pypi_0
+service-identity=21.1.0=pypi_0
+setuptools=52.0.0=py39h06a4308_0
+six=1.16.0=pypi_0
+sklearn=0.0=pypi_0
+soupsieve=2.3.1=pypi_0
+sqlalchemy=1.4.23=pypi_0
+sqlite=3.36.0=hc218d9a_0
+sqlparse=0.4.2=pypi_0
+stack-data=0.1.3=pypi_0
+tabula-py=2.3.0=pypi_0
+tabulate=0.8.9=pypi_0
+tensorboard=2.7.0=pypi_0
+tensorboard-data-server=0.6.1=pypi_0
+tensorboard-plugin-wit=1.8.1=pypi_0
+tensorflow=2.7.0=pypi_0
+tensorflow-estimator=2.7.0=pypi_0
+tensorflow-io-gcs-filesystem=0.23.1=pypi_0
+termcolor=1.1.0=pypi_0
+threadpoolctl=2.2.0=pypi_0
+tifffile=2021.11.2=pypi_0
+tk=8.6.10=hbc83047_0
+tomli=1.2.3=pypi_0
+traitlets=5.1.1=pypi_0
+twisted=21.7.0=pypi_0
+txaio=21.2.1=pypi_0
+typing-extensions=3.10.0.2=pypi_0
+tzdata=2021a=h5d7bf9c_0
+urllib3=1.26.7=pypi_0
+uwsgi=2.0.20=py39hfd59d76_3
+wand=0.6.7=pypi_0
+wcwidth=0.2.5=pypi_0
+websocket=0.2.1=pypi_0
+websocket-client=1.2.1=pypi_0
+websockets=10.1=pypi_0
+werkzeug=2.0.2=pypi_0
+wheel=0.37.0=pyhd3eb1b0_1
+wkhtmltopdf=0.2=pypi_0
+wrapt=1.13.3=pypi_0
+xz=5.2.6=h166bdaf_0
+yaml=0.2.5=h7f98852_2
+zipp=3.6.0=pypi_0
+zlib=1.2.13=h166bdaf_4
+zope-event=4.5.0=pypi_0
+zope-interface=5.4.0=pypi_0
